no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -11,7 +11,7 @@ VERSION ==>                                     #Standard is called ECMAScript. 
 SUPPORT ==>                                     #Use this notation for new features:
                                                ~#  - stage 3 proposal
                                             NUM*#  - introduced by Node NUM.*.* (starting at Node 9)
-                                               *#  - not Node 13.8.0
+                                               *#  - not Node 14.0.0
                                                -#  - not all supported web browsers
                                                |#  - a core Babel plugin exists (only documented if lacks Node/browser support)
                                               ||#  - a non-core Babel plugin exists
@@ -257,7 +257,7 @@ TYPEDETECT(VAL)->STR                           ##Returns:
 
 
 NUM                                             #Always double-precision float
-                                                #Can use TYPED_ARR or SIMD for single-precision floats or 8|16|32-bits [u]ints
+                                                #Can use TYPED_ARR for single-precision floats or 8|16|32-bits [u]ints
                                                 #Radix:
                                                 #  - NUM
                                                 #  - 0xNUM 0XNUM
@@ -352,7 +352,6 @@ IMPLICIT ==>                                    #To STR:
                                                 #        - REGEXP|DATE|ERROR: '...'
                                                 #        - ARR: ARR.join(',')
                                                 #        - FUNC: see FUNC.toString()
-                                             *-|#        - SOBJ: 'SIMD.TYPE(VAL,...)'
                                               -|#     - or OBJ[Symbol.toPrimitive]('string')
                                                 #To NUM:
                                                 #  - STR: '' 0, 'NUM' NUM (trims whitespaces), others NaN
@@ -366,7 +365,6 @@ IMPLICIT ==>                                    #To STR:
                                                 #  - OBJ:
                                                 #     - OBJ.valueOf() (otherwise NaN)
                                                 #        - DATE: DATE.getTime()
-                                             *-|#        - SOBJ: throws error
                                               -|#     - or OBJ[Symbol.toPrimitive]('number')
                                            -|||~#To BIGINT:
                                            -|||~#  - STR: '' 0n, 'NUM' NUMn (trims whitespace), others TypeError
@@ -563,9 +561,9 @@ FUNC([VAL]...)                                  #Fire FUNC and returns its retur
                                               -|#Can be ...ITERABLE, replaced by NEXT...
                                               -|#Can use trailing commas
 
-FUNC?.(...)                                 *-|~#Like FUNC == null ? undefined : FUNC(...)
-                                            *-|~#Does not work with new FUNC?.(...)
-OBJ?.FUNC(...)                              *-|~#Like OBJ == null ? undefined : OBJ.FUNC(...)
+FUNC?.(...)                               14*-|~#Like FUNC == null ? undefined : FUNC(...)
+                                          14*-|~#Does not work with new FUNC?.(...)
+OBJ?.FUNC(...)                            14*-|~#Like OBJ == null ? undefined : OBJ.FUNC(...)
 
 FUNC.length                                     #Number of required arguments
 
@@ -629,8 +627,8 @@ OBJ.VAR                                         #Access property (can be any typ
 OBJ['VAR']                                      #OBJ.VAR has same naming restrictions as QUAL VAR, except can be a reserved word
                                                 #OBJ['VAR'] can use any valid STR
 
-OBJ?.VAR                                    *-|~#Like OBJ == null ? undefined : OBJ.VAR
-OBJ?.['VAR']                                *-|~#Like OBJ == null ? undefined : OBJ['VAR']
+OBJ?.VAR                                  14*-|~#Like OBJ == null ? undefined : OBJ.VAR
+OBJ?.['VAR']                              14*-|~#Like OBJ == null ? undefined : OBJ['VAR']
 
 { VAR[: VAL] ... }                              #Literal OBJ.
                                                 #If could be interpreted as a { ... } structure (e.g. beginning of line),
@@ -904,7 +902,7 @@ TEST ? VAL1 : VAL2                              #Returns VAL1 or VAL2
 
 VAL && VAL2                                     #Same as VAL ? VAL : VAL2
 VAL || VAL2                                     #Same as VAL ? VAL2 : VAL
-VAL ?? VAL2                                  *-|#Same as VAL == null ? VAL : VAL2
+VAL ?? VAL2                                14*-|#Same as VAL == null ? VAL : VAL2
 
 VAR &&= VAL2                                *-|~#Same as VAR = VAR && VAL2
 VAR ||= VAL2                                *-|~#Same as VAR = VAR || VAL2
@@ -1167,32 +1165,32 @@ STR.normalize([STR2])                          -#Compose|decompose combined Unic
                                              \=+===============================+=/
 
 
-OBJ|SOBJ.toLocaleString()                       #Same as OBJ.toString(), but can be reimplemented by children
+OBJ.toLocaleString()                            #Same as OBJ.toString(), but can be reimplemented by children
                                                 #(like OBJ.toString())
 ARR.toLocaleString()                            #Same as ARR.toString() with locale commas
 STR.toLocaleUpper|LowerCase()                   #Using current locale
 
-new Intl.Locale(LOCALE, LOCALE_ARGS)          *-#LOCALE_OBJ
-                                              *-#LOCALE_ARGS is an OBJ:
-                                              *-#  - are Unicode "Language tags"
-                                              *-#  - list: see its doc
-                                              *-#  - supports: ca|calendar, co|collation, hc|hourCycle, kf|caseFirst,
-                                              *-#    kn|numeric, nu|numberingSystem
-                                              *-#Def: current locale
-                                              *-#For Node, support must be done during building
-LOCALE_OBJ.*                                  *-#Anything from LOCALE_ARGS (using long name)
-LOCALE_OBJ.language                           *-#STR
-LOCALE_OBJ.script                             *-#STR
-LOCALE_OBJ.region                             *-#STR
-LOCALE_OBJ.basename                           *-#STR
-LOCALE_OBJ.calendar                           *-#STR
-LOCALE_OBJ.caseFirst                          *-#BOOL
-LOCALE_OBJ.collation                          *-#STR
-LOCALE_OBJ.hourCycle                          *-#STR
-LOCALE_OBJ.numeric                            *-#STR
-LOCALE_OBJ.numberingSystem                    *-#STR
-LOCALE_OBJ.toString()->LOCALE                 *-#
-LOCALE_OBJ.locale                             *-#Like LOCALE, but only the first part
+new Intl.Locale(LOCALE, LOCALE_ARGS)        12*-#LOCALE_OBJ
+                                            12*-#LOCALE_ARGS is an OBJ:
+                                            12*-#  - are Unicode "Language tags"
+                                            12*-#  - list: see its doc
+                                            12*-#  - supports: ca|calendar, co|collation, hc|hourCycle, kf|caseFirst,
+                                            12*-#    kn|numeric, nu|numberingSystem
+                                            12*-#Def: current locale
+                                            12*-#For Node, support must be done during building
+LOCALE_OBJ.*                                12*-#Anything from LOCALE_ARGS (using long name)
+LOCALE_OBJ.language                         12*-#STR
+LOCALE_OBJ.script                           12*-#STR
+LOCALE_OBJ.region                           12*-#STR
+LOCALE_OBJ.basename                         12*-#STR
+LOCALE_OBJ.calendar                         12*-#STR
+LOCALE_OBJ.caseFirst                        12*-#BOOL
+LOCALE_OBJ.collation                        12*-#STR
+LOCALE_OBJ.hourCycle                        12*-#STR
+LOCALE_OBJ.numeric                          12*-#STR
+LOCALE_OBJ.numberingSystem                  12*-#STR
+LOCALE_OBJ.toString()->LOCALE               12*-#
+LOCALE_OBJ.locale                           12*-#Like LOCALE, but only the first part
 LOCALE                                      -|||#STR serialization of LOCALE_OBJ:
                                             -|||#  - e.g. 'fr-FR'
                                             -|||#  - LOCALE_ARGS is serialized as final -u-SHORTEN_ARG-VAL
@@ -1202,7 +1200,7 @@ Intl.getCanonicalLocales                    -|||#Normalize LOCALE, e.g. its case
  (LOCALE[_ARR])->LOCALE_ARR                 -|||#Throws if invalid
 
 LOCALEOPTS ==>                              -|||#Is LOCALE[_ARR][, OPTS]
-                                              *-#Or LOCALE_OBJ[_ARR][, OPTS]
+                                            12*-#Or LOCALE_OBJ[_ARR][, OPTS]
                                             -|||#OPTS:
                                             -|||#  - depends on the method
                                             -|||#  - defaults to using CLDR with the provided LOCALE
@@ -1233,19 +1231,19 @@ STR.localCompare(STR2[, LOCALEOPTS])->NUM      -#  - returns as -1|0|1
                                                -#  - real sorting, not just codepoint-wise
                                                -#  - takes locales into account
 
-new Intl.DisplayNames([LOCALEOPTS])             #Language string translation
-                                                #OPTS:
-                                                #  - type STR among:
-                                                #     - 'region': countries (ISO-3166, e.g. 'US' to 'United States') or world regions (UN M49 code, e.g. '419' to 'Latin America')
-                                                #     - 'language' (e.g. 'fr' or 'fr-CA' to 'French' or 'Canadian French')
-                                                #     - 'script' (ISO-15924, e.g. 'Latn' or 'Arab' to 'Latin' or 'Arabic')
-                                                #     - 'currency' (ISO-4217, e.g. 'USD' to 'US Dollar')
-                                                #     - 'dateTimeField': 'year|quarter|month|weekOfYear|weekday|day|dayPeriod|hour|minute|second|timeZoneName'
-                                                #     - 'quarter': '1'-'4' -> '3rd quarter'
-                                                #     - 'month': '1'-'13' -> 'April'
-                                                #     - 'weekday': '1'-'7' -> 'Monday'
-                                                #     - 'dayPeriod': 'am|pm' -> 'PM'
-DISPLAYNAMES.of(STR)->STR2                      #
+new Intl.DisplayNames([LOCALEOPTS])        14*-|#Language string translation
+                                           14*-|#OPTS:
+                                           14*-|#  - type STR among:
+                                           14*-|#     - 'region': countries (ISO-3166, e.g. 'US' to 'United States') or world regions (UN M49 code, e.g. '419' to 'Latin America')
+                                           14*-|#     - 'language' (e.g. 'fr' or 'fr-CA' to 'French' or 'Canadian French')
+                                           14*-|#     - 'script' (ISO-15924, e.g. 'Latn' or 'Arab' to 'Latin' or 'Arabic')
+                                           14*-|#     - 'currency' (ISO-4217, e.g. 'USD' to 'US Dollar')
+                                           14*-|#     - 'dateTimeField': 'year|quarter|month|weekOfYear|weekday|day|dayPeriod|hour|minute|second|timeZoneName'
+                                           14*-|#     - 'quarter': '1'-'4' -> '3rd quarter'
+                                           14*-|#     - 'month': '1'-'13' -> 'April'
+                                           14*-|#     - 'weekday': '1'-'7' -> 'Monday'
+                                           14*-|#     - 'dayPeriod': 'am|pm' -> 'PM'
+DISPLAYNAMES.of(STR)->STR2                 14*-|#
 
 new Intl.NumberFormat([LOCALEOPTS])         -|||#Number locale formatting.
                                             -|||#OPTS:
@@ -1345,17 +1343,18 @@ DATETIMEFORMAT.formatRange
 DATETIMEFORMAT.formatRangeToParts
  (DATE, DATE2)->OBJ_ARR                 12*-|||~#Like formatToParts() but for range. OBJ has extra member source 'startRange|endRange|shared'
 
-new Intl.RelativeTimeFormat([LOCALEOPTS])  *-|||#Date|Time|Date+Time locale formatting, for relative time ("time ago")
-                                           *-|||#OPTS:
-                                           *-|||#  - style STR:
-                                           *-|||#     - 'long' (def) ("in 1 month")
-                                           *-|||#     - 'short' ("in 1 mo.")
-                                           *-|||#     - 'narrow' ("in 1 mo.")
-                                           *-|||#Ponyfill yahoo 'intl-relativeformat'
-RELATIVETIMEFORMAT.format(NUM, STR)->STR2  *-|||#STR: 'year|quarter|month|week|day|hour|minute|second'
-RELATIVETIMEFORMAT.formatToParts(NUM, STR) *-|||#OBJ_ARR:
- ->OBJ_ARR                                 *-|||#  - type STR: like unit (e.g. "year") or "literal" (anything else)
-                                           *-|||#  - value STR
+new Intl.RelativeTimeFormat([LOCALEOPTS])12*-|||#Date|Time|Date+Time locale formatting, for relative time ("time ago")
+                                         12*-|||#OPTS:
+                                         12*-|||#  - style STR:
+                                         12*-|||#     - 'long' (def) ("in 1 month")
+                                         12*-|||#     - 'short' ("in 1 mo.")
+                                         12*-|||#     - 'narrow' ("in 1 mo.")
+                                         12*-|||#Ponyfill yahoo 'intl-relativeformat'
+RELATIVETIMEFORMAT.format
+ (NUM, STR)->STR2                        12*-|||#STR: 'year|quarter|month|week|day|hour|minute|second'
+RELATIVETIMEFORMAT.formatToParts         12*-|||#OBJ_ARR:
+ (NUM, STR)->OBJ_ARR                     12*-|||#  - type STR: like unit (e.g. "year") or "literal" (anything else)
+                                         12*-|||#  - value STR
 
 new Intl.PluralRules([LOCALEOPTS])             -#Locale-specific plural group of a NUM
                                                -#OPTS:
@@ -1367,20 +1366,20 @@ new Intl.PluralRules([LOCALEOPTS])             -#Locale-specific plural group of
 PLURALRULES.select(NUM)->STR                   -#Returns plurality of NUM according to locale, among 'zero', 'one', 'two',
                                                -#'few', 'many', 'other'
 
-new Intl.ListFormat([LOCALEOPTS])            *-~#Format list of items with natural language.
-                                             *-~#OPTS:
-                                             *-~#  - type:
-                                             *-~#     - 'regular' (def) ("and")
-                                             *-~#     - 'disjunction' ("or")
-                                             *-~#     - 'unit' (only commas|spaces)
-                                             *-~#  - style STR:
-                                             *-~#     - 'long' (def)
-                                             *-~#     - 'short' (use abbreviations|punctuations, no words) (only type 'unit')
-                                             *-~#     - 'narrow' (use only spaces)
-LISTFORMAT.format(STR_ARR)->STR              *-~#
-LISTFORMAT.formatToParts(STR_ARR)->OBJ_ARR   *-~#OBJ_ARR:
-                                             *-~#  - type 'element' (STR) or 'literal' (separators)
-                                             *-~#  - value STR
+new Intl.ListFormat([LOCALEOPTS])          12*-~#Format list of items with natural language.
+                                           12*-~#OPTS:
+                                           12*-~#  - type:
+                                           12*-~#     - 'regular' (def) ("and")
+                                           12*-~#     - 'disjunction' ("or")
+                                           12*-~#     - 'unit' (only commas|spaces)
+                                           12*-~#  - style STR:
+                                           12*-~#     - 'long' (def)
+                                           12*-~#     - 'short' (use abbreviations|punctuations, no words) (only type 'unit')
+                                           12*-~#     - 'narrow' (use only spaces)
+LISTFORMAT.format(STR_ARR)->STR            12*-~#
+LISTFORMAT.formatToParts(STR_ARR)->OBJ_ARR 12*-~#OBJ_ARR:
+                                           12*-~#  - type 'element' (STR) or 'literal' (separators)
+                                           12*-~#  - value STR
 
 new Intl.Segmenter([LOCALEOPTS])             *-~#Break down strings into smaller parts, locale-specific.
                                              *-~#OPTS:
@@ -1473,7 +1472,7 @@ Array.of(VAL...)                              -|#Same as new Array(VAL...) excep
                                               -|#VAL can be ...ITERABLE
 
 ARR[NUM]                                        #
-ARR?.[NUM]                                  *-|~#Like ARR == null ? undefined : ARR[NUM]
+ARR?.[NUM]                                14*-|~#Like ARR == null ? undefined : ARR[NUM]
 
 ARRAYLIKE                                       #Any OBJ which understand OBJ[NUM] and OBJ.length
                                                 #Can use all ARR methods, except concat() using:
@@ -1561,12 +1560,12 @@ DATAVIEW.buffer|byteLength|byteOffset           #Readonly
 
 DATAVIEW.get[Ui|I]nt8|16|32([UINT[, BOOL]])
 DATAVIEW.getFloat32|64(UINT[, BOOL])            #UINT is byte offset, BOOL endianness (def: true, i.e. little endian)
-DATAVIEW.getBig[Ui|I]nt64(UINT[, BOOL])      *-|#
+DATAVIEW.getBig[Ui|I]nt64(UINT[, BOOL])  10.4*-|#
 DATAVIEW.set*(UINT, UINT2[, BOOL])              #UINT2 is the value to set
 
 
 TypedArray                                      #Base prototype of [Ui|I]nt8|16|32Array or Float32|64Array
-                                             *-|#and Big[Ui|i]nt64Array
+                                         10.4*-|#and Big[Ui|i]nt64Array
                                                 #Each have a given associated type
                                                 #Not accessible globally but through prototype chain.
                                               -|#Mixes in all ARR methods, including static ones.
@@ -1808,8 +1807,8 @@ Math.random()                                   #Float in [0,1). Seeded from cur
 
 JSON ==>                                        #See JSON-js doc
 
-                                             *-|#U+2028|2029 (line separators) allowed unescaped
-                                              *-#Escaping of invalid UTF-8 (e.g. JSON.stringify('\udead'))
+                                           10*-|#U+2028|2029 (line separators) allowed unescaped
+                                            12*-#Escaping of invalid UTF-8 (e.g. JSON.stringify('\udead'))
 
 
                                              /=+===============================+=\
