--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -542,7 +542,8 @@ CLI ==>                                         #Not defined: require.main, proc
 
 
 import|export ...                            12*#ES modules
-import('URI')->PROMISE                       12*#Prints an experimental warning
+                                            <14*#Prints an experimental warning
+import('URI')->PROMISE                       12*#
 
 import ... from 'URI'                        12*#Import from 'URI' not PATH
                                              12*#Need to be URI encoded
@@ -852,8 +853,8 @@ OSTREAM.write(SVAL[, 'ENCODING'[,FUNC()]])->BOOL#Writes chunks.
                                                 #BOOL:
                                                 #  - false if data cannot be buffered anymore (i.e. buffer is full)
                                                 #  - i.e. should wait for OSTREAM.once('drain') before writing again
-OSTREAM.end(SVAL[, 'ENCODING'[, FUNC()]])
- ->OSTREAM                                      #Same but for final chunk. FUNC is the finish event handler
+OSTREAM.end(SVAL[, 'ENCODING'[, FUNC()]])       #Same but for final chunk. FUNC is the finish event handler
+ ->OSTREAM                                   14*#or error event handler
 OSTREAM.destroy([ERROR])                        #
 OSTREAM.destroyed                               #BOOL
 OSTREAM.setDefaultEncoding('ENCODING')->OSTREAM #Def: 'utf-8'. Used by write() and end()
@@ -3502,7 +3503,6 @@ types.isSymbolObject(VAL)->BOOL                 #True if Object(Symbol(VAL)) (no
 types.isBoxedPrimitive(VAL)->BOOL               #True if new Boolean|Number|String(VAL) or Object(Symbol|BigInt(VAL))
 
 types.isModuleNamespaceObject(VAL)->BOOL        #True if OBJ from import * as OBJ
-types.isWebAssemblyCompiledModule(VAL)->BOOL    #True if compiled WASM
 types.isExternal(VAL)->BOOL                     #True if external C/C++ value
 
 
