no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #13.13.0 (current), 12.16.2 (active LTS), 10.20.1 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #14.0.0 (current), 13.13.0 (current), 12.16.2 (active LTS), 10.20.1 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -23,7 +23,7 @@ VERSION ==>                                     #13.13.0 (curr
                                                 #     - then "maintainance LTS" (only critical bug fixes) for 1 more year
                                                 #  - non-LTS also have a maintainance period of 0.5 years
                                                 #Features are often backported.
-                                                #For libraries I should support >=8.12.0
+                                                #For libraries I should support >=10.17.0
                                             NUM*#Means introduced by NUM.*.*
 
 ES6 ==>                                         #Support is documented in JavaScript doc
@@ -158,19 +158,12 @@ ASYNC_LOCAL_STORAGE.run(STORE, FUNC())       13*#Creates a STORE that only exist
                                              13*#STORE is undefined outside that context.
                                              13*#STORE is cleaned up once the context stops.
                                              13*#STORE can be anything (e.g. an OBJ or MAP)
-ASYNC_LOCAL_STORAGE.runSyncAndReturn         13*#Same except:
- (STORE, FUNC()->VAL)->VAL                   13*#  - exceptions in FUNC() are propagated
-                                             13*#  - FUNC() return value is returned too
-                                             13*#  - FUNC() is fired in same microtask
-                                             13*#  - can use util.promisify()
 ASYNC_LOCAL_STORAGE.getStore()->STORE        13*#Retrieve the STORE
 ASYNC_LOCAL_STORAGE.disable()                13*#Make all STORE undefined until run*() called again
                                              13*#Should be called to cleanup ASYNC_LOCAL_STORAGE itself (not its STOREs)
 ASYNC_LOCAL_STORAGE.enterWithStore(STORE)    13*#Make getStore() return STORE for the current synchronous context (current function and its sync closures)
 ASYNC_LOCAL_STORAGE.exit                     13*#Opposite
  (FUNC([...ARGS])[, ...ARGS])                13*#Creates a new async context
-ASYNC_LOCAL_STORAGE.exitSyncAndReturn
- (FUNC([...ARGS])[, ...ARGS])                13*#Same as runSyncAndReturn() but for exit()
 
 
                                              /=+===============================+=\
@@ -2256,6 +2249,7 @@ FS.promises                                     #Like FS but:
                                                 #  - FD_INT are FILE_HANDLE instead
                                                 #     - no FS.close() but FILE_HANDLE.close() is available
                                                 #  - FS.constants|Stats|*OK remain on FS.*
+require('fs/promises')                       14*#Same
 FILE_HANDLE                                     #Abstraction of a file descriptor, with automatic closing on FS PROMISE rejection
 FILE_HANDLE.fd                                  #FD_INT
 FILE_HANDLE.FUNC(...)                           #Same as FSP.[f]FUNC(FILE_HANDLE, ...)
@@ -2692,6 +2686,7 @@ CHILDPROCESS.on("exit|close",FUNC(UINT,SIGNAME))#UINT is the exit code, SIGNAME 
 process.signalCode                              #Like process.exitCode but for SIGNAME
 CHILDPROCESS.kill(['SIGNAL'|SIGNUM])            #Def: "SIGTERM"
 CHILDPROCESS.channel                            #Underlying IOSTREAM for send()
+                                             14*#Different shape. Can ref|unref()
 
 
                                              /=+===============================+=\
