no commit message

--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
@@ -195,10 +195,10 @@ ACORN-CLASS-FIELDS               ##PLUGIN for class { VAR [= VAL] }
                                  ##Version 0.3.2
 ACORN-PRIVATE-CLASS-ELEMENTS     ##PLUGIN for class { #VAR }
                                  ##New token type: privateName
-                                 ##Version 0.2.2
-ACORN-PRIVATE-CLASS-METHODS      ##PLUGIN for class { #FUNC() }
+                                 ##Version 0.2.5
+ACORN-PRIVATE-METHODS            ##PLUGIN for class { #FUNC() }
                                  ##New token type: privateName
-                                 ##Version 0.3.0
+                                 ##Version 0.3.1
 ACORN-STATIC-CLASS-FEATURES      ##PLUGIN for class { static VAR [= VAL] }
                                  ##Version 0.2.0
 
@@ -207,7 +207,7 @@ ACORN-DYNAMIC-IMPORT             ##PLUGIN for import()
                                  ##Version 4.0.0
 
 ACORN-IMPORT-META                ##PLUGIN for import.meta
-                                 ##Version 1.0.0
+                                 ##Version 1.1.0
 
 ACORN-NUMERIC-SEPARATOR          ##PLUGIN for NUM_NUM_NUM
                                  ##Version 0.3.0
