no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.0.0-alpha.3
+VERSION ==>                       #7.0.0-rc.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -77,7 +77,7 @@ eslint --no-ignore                #Do not use .eslintignore
 
 CONF.ignorePatterns               #'PATTERN'_ARR. Like .eslintignore
 
-eslint --ext EXT,...              #File extensions (def: .js)
+eslint --ext EXT,...              #File extensions
 
 eslint
  --no-error-on-unmatched-pattern  #Do not error when 'GLOB' does not match anything
