no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1011,10 +1011,6 @@ no-magic-numbers [OBJ]            #Must use constant variables instead of consta
                                   #  - enforceConst BOOL (def: false)
                                   #  - detectObjects BOOL (def: false): analyze OBJ declaration members
 
-fp/no-nil                        ##Avoid null|undefined, except in comparison
-                                 ##Avoid VARs initialized to null|undefined
-                                 ##Avoid FUNCs that return null|undefined (including no return statement)
-
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -1275,7 +1271,7 @@ unicorn/error-message            ##Avoid new Error(), must do new Error(STR)
 
 unicorn/catch-error-name [OBJ]   ##Catch clause variable name must be called OBJ.name STR (def: 'error')
                                  ##OBJ:
-                                 ##  - caughtErrorsIgnorePattern REGEXP (def: '_' or *Error or *error): patterns to ignore
+                                 ##  - ignore STR|REGEXP[_ARR] (def: none)
 no-ex-assign                      #Avoid assigning to ERROR in catch clause
 no-useless-catch                  #Avoid catch clause that only rethrows ERROR
 no-unsafe-finally                 #Avoid return|throw|break|continue in finally clauses.
@@ -1561,7 +1557,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (18.0.1)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (19.0.0)
 unicorn/prefer-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
 unicorn/prefer-trim-start-end    ##Prefer STR.trimStart|End() over STR.trimLeft|Right()
 unicorn/prefer-string-slice      ##Must use STR.slice() instead of STR.substr|substring()
@@ -1583,8 +1579,6 @@ unicorn/string-content [OBJ]     ##Avoid specific substrings in any STR
                                  ##           - message STR
                                  ##           - fix BOOL (def: true): autofix
                                  ##        - BOOL|STR: shortcut for suggest|fix
-                                 ##     - default to { "'": "`" } (i.e. must avoid ' in any STR), which must be explicitely
-                                 ##       disabled if not wanted
 
 
                                              /=+===============================+=\
@@ -2079,6 +2073,13 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                             \  :_______________________________:  /
                                              \=+===============================+=/
 
+
+unicorn/no-null [OBJ]            ##Avoid null
+                                 ##OBJ:
+                                 ##  - checkStrictEquality BOOL: if false (def), ignore ===|!== null
+fp/no-nil                        ##Avoid null|undefined, except in comparison
+                                 ##Avoid VARs initialized to null|undefined
+                                 ##Avoid FUNCs that return null|undefined (including no return statement)
 
 no-void [OBJ]                     #Avoid void VAL
                                   #OBJ:
