no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -420,7 +420,7 @@ VAL |> VAL2                  (bl)*#    or '|>'
 
 VAR = += -= *= /= **= %= <<= >>=  #Child of EXPR, type 'AssignmentExpression':
 >>>= |= ^= &= VAL                 #  - operator '=|+=|-=|*=|/=|**=|%=|<<=|>>=|>>>=||=|^=|&='
-VAR &&= ||= ??= VAL          (bl)*#    or '&&=|||=|??='
+VAR &&= ||= ??= VAL           (bl)#    or '&&=|||=|??='
                                   #  - left PATTERN or (only on older JavaScript engines) EXPR
                                   #  - right EXPR
 
