no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #14.0.0 (current), 13.13.0 (current), 12.16.2 (active LTS), 10.20.1 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #14.1.0 (current), 13.14.0 (current), 12.16.3 (active LTS), 10.20.1 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -1456,6 +1456,7 @@ connect([PORT_NUM[,'HOST']]OBJ[,FUNC(TLSSOCKT)])#Like TCP.connect(), but for TLS
                                                 #  - lookup FUNC: DNS lookup, def: DNS.lookup()
                                              12*#  - allowHalfOpen: like NET.createServer()
                                              12*#  - pskCallback('HINT')->{ psk TDBUFFER, identity STR }|null
+                                             14*#  - highWaterMark NUM
                                                 #FUNC is 'secureConnect' event handler
                                                 #Returns a TLSSOCKET.
 
@@ -1592,8 +1593,7 @@ REQ.statusCode|Message                          #Only for CLIENTREQ's REQ
 REQ.socket                                      #TCPSOCKET
 REQ.flushHeaders()                              #Send the headers right away, instead of trying to send in same TCP packet as body.
                                                 #Useful if headers are given quickly but body retrieval takes time.
-REQ.on('aborted', FUNC())                       #Aborted by client
-REQ.aborted                                     #BOOL
+REQ.destroyed                                   #BOOL
 REQ.reusedSocket                             12*#BOOL. Whether underlying TCP has been used by another REQ before.
                                              12*#This can happen when using an AGENT with a high keepAliveMsecs.
 
@@ -1662,6 +1662,7 @@ request(['URI'|URI][, OBJ][, FUNC(REQ)])        #Sends a HTTP request.
                                                 #  - timeout NUM
                                                 #  - lookup(...) (def: DNS.lookup(...))
                                              13*#  - maxHeaderSize NUM: see --max-http-header-size
+                                             14*#  - highWaterMark NUM
                                                 #FUNC is 'response' event handler.
 get(['URI'|URI][, OBJ][, FUNC(REQ)])            #Same but use method "GET" and automatically calls OSTREAM.end()
 CLIENTREQ.on("socket", FUNC(TCPSOCKET))         #Fired when socket is created to send the request.
@@ -1677,9 +1678,7 @@ CLIENTREQ.on
 ("connect", FUNC(REQ, TCPSOCKET, BUFFER))       #Fired when server responds to a CONNECT request
 CLIENTREQ.on
 ("upgrade", FUNC(REQ, TCPSOCKET, BUFFER))       #Fired when server responds with Upgrade [S]
-CLIENTREQ.abort()                               #
-CLIENTREQ.on('abort', FUNC())                   #Aborted by client, i.e. CLIENTREQ.abort()
-CLIENTREQ.on('aborted', FUNC())                 #Aborted by server
+CLIENTREQ.destroy()                             #
 CLIENTREQ.flushHeaders()                        #Send request headers right away, even if request body not ready for send yet
 
 AGENT                                           #Socket pools manager for CLIENTREQ (not REQ|RES)
@@ -2948,6 +2947,7 @@ compileFunction('CODE'[, 'PARAM_NAME'_ARR]      #Like new Function() but use OPT
  [, RUN_OPTS|SCRIPT_OPTS])->FUNC                #RUN_OPTS|SCRIPT_OPTS:
                                                 #  - filename, line|columnOffset, cachedData
                                                 #  - contextExtensions OBJ_ARR (def: []): objects wrapping COBJ
+                                             13*#  - importModuleDynamically(...): see above
 
 new Script(STR[, RUN_OPTS])                     #Returns a SCRIPT, i.e. a compiled version of STR:
                                                 #  - separates compiling from running STR
