no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -8,7 +8,7 @@
 ALTERNATIVES ==>                  #  - typescript (preferred)
                                   #  - flow: very similar to TypeScript, a little less features, less focus on extending JavaScript, less high-profile
 
-VERSION ==>                       #3.8.3
+VERSION ==>                       #3.9-rc
 
 
                                              /=+===============================+=\
@@ -776,6 +776,8 @@ TRANSTYPING RULES ==>             #For TYPE2 <-- TYPE, TYPE2 must be contravaria
 
 // @ts-[no]check                  #Use|ignore type checking on current file
 // @ts-ignore                     #Ignore type checking on next line.
+                                  #Works in *.js too (if --checkJs)
+// @ts-expect-error               #Ignore type checking error on next line, but report if no type checking error
                                   #Works in *.js too (if --checkJs)
 
 TYPE INFERENCE ==>                #Only needed for untyped values:
