no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -215,6 +215,11 @@ VAR instanceof TYPE                             #Returns true if VAR is instance
                                                 #  - VAR.[__proto__...]constructor === TYPE,
                                                 #    but without transtyping VAR if it is not an OBJ
                                                 #  - VAR.[__proto__...]__proto__ === TYPE.prototype
+                                                #For TYPE that are global variables (e.g. instanceof Error):
+                                                #  - the caller might have a different sets of global variables than the callee
+                                                #     - e.g. when using Node.js 'vm', or iframes in browser
+                                                #  - should instead rely on VAR.toString()
+                                                #     - e.g. Object.prototype.toString.call(VAR) === '[object Error]'
 TYPE.prototype.isPrototypeOf(VAR)               #Same
 TYPE[Symbol.hasInstance](VAR)->BOOL           -|#Define to override VAR instanceof TYPE
 
